@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
+ * Copyright © 2014-2019 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,25 +20,19 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.fluentinterface.fluentiterable;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Spliterator;
 import java.util.function.Consumer;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoMoreInteractions;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 /**
  * Date: 12/12/15 - 7:00 PM
@@ -57,7 +51,7 @@ public abstract class FluentIterableTest {
 
   @Test
   public void testFirst() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3, 10, 9, 8);
+    final List<Integer> integers = List.of(1, 2, 3, 10, 9, 8);
     final Optional<Integer> first = createFluentIterable(integers).first();
     assertNotNull(first);
     assertTrue(first.isPresent());
@@ -74,7 +68,7 @@ public abstract class FluentIterableTest {
 
   @Test
   public void testFirstCount() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3, 10, 9, 8);
+    final List<Integer> integers = List.of(1, 2, 3, 10, 9, 8);
     final List<Integer> first4 = createFluentIterable(integers)
             .first(4)
             .asList();
@@ -90,7 +84,7 @@ public abstract class FluentIterableTest {
 
   @Test
   public void testFirstCountLessItems() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3);
+    final List<Integer> integers = List.of(1, 2, 3);
     final List<Integer> first4 = createFluentIterable(integers)
             .first(4)
             .asList();
@@ -105,7 +99,7 @@ public abstract class FluentIterableTest {
 
   @Test
   public void testLast() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3, 10, 9, 8);
+    final List<Integer> integers = List.of(1, 2, 3, 10, 9, 8);
     final Optional<Integer> last = createFluentIterable(integers).last();
     assertNotNull(last);
     assertTrue(last.isPresent());
@@ -122,7 +116,7 @@ public abstract class FluentIterableTest {
 
   @Test
   public void testLastCount() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3, 10, 9, 8);
+    final List<Integer> integers = List.of(1, 2, 3, 10, 9, 8);
     final List<Integer> last4 = createFluentIterable(integers)
             .last(4)
             .asList();
@@ -137,7 +131,7 @@ public abstract class FluentIterableTest {
 
   @Test
   public void testLastCountLessItems() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3);
+    final List<Integer> integers = List.of(1, 2, 3);
     final List<Integer> last4 = createFluentIterable(integers)
             .last(4)
             .asList();
@@ -152,7 +146,7 @@ public abstract class FluentIterableTest {
 
   @Test
   public void testFilter() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3, 10, 9, 8);
+    final List<Integer> integers = List.of(1, 2, 3, 10, 9, 8);
     final List<Integer> evenItems = createFluentIterable(integers)
             .filter(i -> i % 2 == 0)
             .asList();
@@ -166,7 +160,7 @@ public abstract class FluentIterableTest {
 
   @Test
   public void testMap() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3);
+    final List<Integer> integers = List.of(1, 2, 3);
     final List<Long> longs = createFluentIterable(integers)
             .map(Integer::longValue)
             .asList();
@@ -180,7 +174,7 @@ public abstract class FluentIterableTest {
 
   @Test
   public void testForEach() {
-    final List<Integer> integers = Arrays.asList(1, 2, 3);
+    final List<Integer> integers = List.of(1, 2, 3);
 
     final Consumer<Integer> consumer = mock(Consumer.class);
     createFluentIterable(integers).forEach(consumer);
@@ -194,7 +188,7 @@ public abstract class FluentIterableTest {
 
   @Test
   public void testSpliterator() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3);
+    final List<Integer> integers = List.of(1, 2, 3);
     final Spliterator<Integer> split = createFluentIterable(integers).spliterator();
     assertNotNull(split);
   }
