@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
+ * Copyright © 2014-2019 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,12 +20,12 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.hexagonal.domain;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.HashSet;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
@@ -38,14 +38,14 @@ class LotteryTicketTest {
   @Test
   void testEquals() {
     PlayerDetails details1 = new PlayerDetails("bob@foo.bar", "1212-121212", "+34332322");
-    LotteryNumbers numbers1 = LotteryNumbers.create(new HashSet<>(Arrays.asList(1, 2, 3, 4)));
+    LotteryNumbers numbers1 = LotteryNumbers.create(Set.of(1, 2, 3, 4));
     LotteryTicket ticket1 = new LotteryTicket(new LotteryTicketId(), details1, numbers1);
     PlayerDetails details2 = new PlayerDetails("bob@foo.bar", "1212-121212", "+34332322");
-    LotteryNumbers numbers2 = LotteryNumbers.create(new HashSet<>(Arrays.asList(1, 2, 3, 4)));
+    LotteryNumbers numbers2 = LotteryNumbers.create(Set.of(1, 2, 3, 4));
     LotteryTicket ticket2 = new LotteryTicket(new LotteryTicketId(), details2, numbers2);
     assertEquals(ticket1, ticket2);
     PlayerDetails details3 = new PlayerDetails("elsa@foo.bar", "1223-121212", "+49332322");
-    LotteryNumbers numbers3 = LotteryNumbers.create(new HashSet<>(Arrays.asList(1, 2, 3, 8)));
+    LotteryNumbers numbers3 = LotteryNumbers.create(Set.of(1, 2, 3, 8));
     LotteryTicket ticket3 = new LotteryTicket(new LotteryTicketId(), details3, numbers3);
     assertNotEquals(ticket1, ticket3);
   }
